# CA_Housing_Analysis

./: .gitignore  README  README.md  UvSet.md  pyproject.toml  requirements.txt  simple.ipynb
cs_577_final_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: ds3-2.csv  ds3-4.csv
src/: ca_pop_EDA.ipynb  debt_EDA.ipynb  housing_unit.ipynb  johnny.ipynb  main.ipynb  median_price_EDA.ipynb  property_tax_EDA.ipynb  regression_debt_price_units.ipynb  simple.ipynb  small_neural.ipynb
src/.ipynb_checkpoints/: simple-checkpoint.ipynb
src/util/: data_loading.py
